# SPLN2324

./: README.md
TPC2/: word_freq.py
TPC3/: makepyproject.py  metadata.json  pyproject.toml
TPC5/: tpc.py
TPC6/: tpc.py
