

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "makepyproject.py"
authors = [
    {name = "", email="josesmendes@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

dependencies = [
    "FIX ME"
]

[project.scripts]
makepyproject.py = "makepyproject.py:main"
                     